# ghost2lead-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  compose.prod.yaml  compose.yaml  main.py  pyproject.toml  pyproject.worker.toml  requirements.txt
.github/workflows/: deploy.yml
app/: main.py
app/api/: deps.py  utils.py
app/api/v1/: router.py
app/api/v1/routers/: auth.py  lead.py  stats.py
app/core/: agents.yaml  config.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  redis_client.py  tasks.yaml
app/helpers/: sanitize_header_value.py
app/models/: __init__.py  base.py  lead.py  user.py
app/repository/: __init__.py  base_repository.py  lead_repository.py  posthog_event_repository.py  stats_repository.py  user_repository.py
app/schemas/: base.py  base_schema.py  lead_schema.py  stats_schema.py  user_schema.py
app/security/: jwt.py  oauth2.py
app/services/: __init__.py  agent_service.py  base_service.py  lead_service.py  stats_service.py  user_service.py
app/template/: otp_email.html
app/util/: api_response.py  encrypt_ip.py  enums.py  normalize_text.py
app/worker/: tasks.py
config/: settings.py
lib/: database.py
migrations/: env.py
migrations/versions/: 1792a84f4305_add_users_table.py  2db98bf354ff_add_last_event_processed_timestamp_and_.py  882a74a8c1e8_add_profile_and_actions_to_lead_table.py  b41e24ce7363_remove_ip_and_signup_from_lead_table_.py  bce1b2ff1ea5_add_lead_table.py
scripts/: entrypoint.sh  healthcheck.sh  seed_admin.py
tests/: test_smoke.py
