[project]
name = "ghost2lead-backend"
version = "0.1.0"
description = "Ghost2Lead backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "crewai>=1.6.1",
    "cryptography>=46.0.4",
    "fastapi>=0.128.0",
    "greenlet>=3.3.1",
    "pydantic-settings>=2.12.0",
    "scalar-fastapi>=1.6.1",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]
