[project]
name = "ghost2lead-backend"
version = "0.1.0"
description = "Ghost2Lead backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "asgiref>=3.7.0",
    "asyncpg>=0.31.0",
    "celery>=5.4.0",
    "pyjwt>=2.10.0",
    "redis>=5.0.0",
    "crewai>=1.6.1",
    "cryptography>=46.0.4",
    "email-validator>=2.0.0",
    "fastapi-mail>=1.4.0",
    "fastapi>=0.128.0",
    "greenlet>=3.3.1",
    "pydantic-settings>=2.12.0",
    "scalar-fastapi>=1.6.1",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
    "flower>=2.0.0",
]
